bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:3: error: illegal start of simple expression
  if(a==10)[
           ^